--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^20.19.11",
     "@types/react": "19.1.11",
     "autoprefixer": "10.4.18",
     "eslint": "8.57.0",
